--- a/index.html
+++ b/index.html
@@ -4,6 +4,19 @@
     <title>Awesome Pizza</title>
 </head>
 <body>
-    <h1>This is an html page</h1>
+    <header>
+        <h1>Awesome Pizza</h1>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="index.html">Menu</a></li>
+                <li><a href="index.html">Location</a></li>
+                <li><a href="index.html">About</a></li>
+                <li><a href="index.html">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+    <img src="pizza.png" alt="Pizza!" width="700">
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id veritatis quam ipsa nostrum odio repellendus itaque non minus laborum voluptatum fugiat quidem aliquam, mollitia temporibus voluptas labore, culpa neque optio.</p>
 </body>
 </html>
