--- a/index.html
+++ b/index.html
@@ -2,21 +2,24 @@
 <html>
 <head>
     <title>Awesome Pizza</title>
+    <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-    <header>
-        <h1>Awesome Pizza</h1>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="index.html">Menu</a></li>
-                <li><a href="index.html">Location</a></li>
-                <li><a href="index.html">About</a></li>
-                <li><a href="index.html">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
-    <img src="pizza.png" alt="Pizza!" width="700">
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id veritatis quam ipsa nostrum odio repellendus itaque non minus laborum voluptatum fugiat quidem aliquam, mollitia temporibus voluptas labore, culpa neque optio.</p>
+    <div class="container">
+        <header>
+            <h1>Awesome Pizza</h1>
+            <nav>
+                <ul class="nav">
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="index.html">Menu</a></li>
+                    <li><a href="index.html">Location</a></li>
+                    <li><a href="index.html">About</a></li>
+                    <li><a href="index.html">Contact</a></li>
+                </ul>
+            </nav>
+        </header>
+        <img src="pizza.png" alt="Pizza!" width="700">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id veritatis quam ipsa nostrum odio repellendus itaque non minus laborum voluptatum fugiat quidem aliquam, mollitia temporibus voluptas labore, culpa neque optio.</p>
+    </div>
 </body>
 </html>
