Add a menu of pizzas.

--- a/menu.html
+++ b/menu.html
@@ -19,8 +19,36 @@
                 </ul>
             </nav>
         </header>
-        <img src="pizza.png" alt="Pizza!" width="700">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id veritatis quam ipsa nostrum odio repellendus itaque non minus laborum voluptatum fugiat quidem aliquam, mollitia temporibus voluptas labore, culpa neque optio.</p>
+        <h2>Menu</h2>
+        <table>
+            <tr>
+                <th>Product</th>
+                <th>Price</th>
+                <th>Protein</th>
+                <th>Spicy Rating</th>
+            </tr>
+            <tr>
+                <td>Original</td>
+                <td>$10</td><td>10 g</td>
+                <td>*</td></tr>
+            <tr>
+                <td>Teriyaki</td>
+                <td>$12</td>
+                <td>9 g</td>
+                <td>*</td></tr>
+            <tr>
+                <td>Pepper</td>
+                <td>$11</td>
+                <td>10 g</td>
+                <td>***</td>
+            </tr>
+            <tr>
+                <td>BBQ</td>
+                <td>$14</td>
+                <td>9 g</td>
+                <td>**</td>
+            </tr>
+        </table>
     </div>
 </body>
 </html>
