Add About, Contact, Location with embedded iframes

--- a/contact.html
+++ b/contact.html
@@ -19,8 +19,9 @@
                 </ul>
             </nav>
         </header>
-        <img src="pizza.png" alt="Pizza!" width="700">
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id veritatis quam ipsa nostrum odio repellendus itaque non minus laborum voluptatum fugiat quidem aliquam, mollitia temporibus voluptas labore, culpa neque optio.</p>
+        <p><a href="https://www.paypal.com/cgi-bin/webscr?business=nicksuch@gmail.com&cmd=_xclick&currency_code=USD&amount=10&item_name=Buy%20Awesome%20Pizza">Send us money</a> via PayPal</p>
+        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScZD6ymlXJtOocqoXraISb5m7FEg8Uf8rGmtqQBjOZjinodXw/viewform?embedded=true" width="760" height="1200" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
     </div>
 </body>
 </html>
