--- a/location.html
+++ b/location.html
@@ -19,7 +19,7 @@
                 </ul>
             </nav>
         </header>
-        <img src="pizza.png" alt="Pizza!" width="700">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3142.139290615656!2d-84.50191204223722!3d38.0438406440411!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88424494dc8ba5c7%3A0x157329e6432f691c!2sJoe+Bologna&#39;s+Restaurant+%26+Pizzeria%2C+Inc!5e0!3m2!1sen!2sus!4v1471889192476" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id veritatis quam ipsa nostrum odio repellendus itaque non minus laborum voluptatum fugiat quidem aliquam, mollitia temporibus voluptas labore, culpa neque optio.</p>
     </div>
 </body>
