--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
                 </ul>
             </nav>
         </header>
-        <img src="pizza.png" alt="Pizza!" width="700">
+        <iframe width="640" height="360" src="https://www.youtube.com/embed/iwg3KWZ7LLE?rel=0&amp;controls=0" frameborder="0" allowfullscreen></iframe>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id veritatis quam ipsa nostrum odio repellendus itaque non minus laborum voluptatum fugiat quidem aliquam, mollitia temporibus voluptas labore, culpa neque optio.</p>
     </div>
 </body>
