--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Awesome Pizza</title>
-    <link href='http://fonts.googleapis.com/css?family=Russo+One' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Russo+One' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
