Jekyll-ify the pizza site and add blog

--- a/contact.html
+++ b/contact.html
@@ -1,27 +1,7 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Awesome Pizza</title>
-    <link href='https://fonts.googleapis.com/css?family=Russo+One' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="styles.css" />
-</head>
-<body>
-    <div class="container">
-        <header>
-            <h1>Awesome Pizza</h1>
-            <nav>
-                <ul class="nav">
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="menu.html">Menu</a></li>
-                    <li><a href="location.html">Location</a></li>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="contact.html">Contact</a></li>
-                </ul>
-            </nav>
-        </header>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id veritatis quam ipsa nostrum odio repellendus itaque non minus laborum voluptatum fugiat quidem aliquam, mollitia temporibus voluptas labore, culpa neque optio.</p>
-        <p><a href="https://www.paypal.com/cgi-bin/webscr?business=nicksuch@gmail.com&cmd=_xclick&currency_code=USD&amount=10&item_name=Buy%20Awesome%20Pizza">Send us money</a> via PayPal</p>
-        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScZD6ymlXJtOocqoXraISb5m7FEg8Uf8rGmtqQBjOZjinodXw/viewform?embedded=true" width="760" height="1200" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
-    </div>
-</body>
-</html>
+---
+layout: page
+title: Contact
+---
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id veritatis quam ipsa nostrum odio repellendus itaque non minus laborum voluptatum fugiat quidem aliquam, mollitia temporibus voluptas labore, culpa neque optio.</p>
+<p><a href="https://www.paypal.com/cgi-bin/webscr?business=nicksuch@gmail.com&cmd=_xclick&currency_code=USD&amount=10&item_name=Buy%20Awesome%20Pizza">Send us money</a> via PayPal</p>
+<iframe src="https://docs.google.com/forms/d/e/1FAIpQLScZD6ymlXJtOocqoXraISb5m7FEg8Uf8rGmtqQBjOZjinodXw/viewform?embedded=true" width="760" height="1200" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
