--- a/menu.html
+++ b/menu.html
@@ -1,54 +1,34 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Awesome Pizza</title>
-    <link href='https://fonts.googleapis.com/css?family=Russo+One' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="styles.css" />
-</head>
-<body>
-    <div class="container">
-        <header>
-            <h1>Awesome Pizza</h1>
-            <nav>
-                <ul class="nav">
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="menu.html">Menu</a></li>
-                    <li><a href="location.html">Location</a></li>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="contact.html">Contact</a></li>
-                </ul>
-            </nav>
-        </header>
-        <h2>Menu</h2>
-        <table>
-            <tr>
-                <th>Product</th>
-                <th>Price</th>
-                <th>Protein</th>
-                <th>Spicy Rating</th>
-            </tr>
-            <tr>
-                <td>Original</td>
-                <td>$10</td><td>10 g</td>
-                <td>*</td></tr>
-            <tr>
-                <td>Teriyaki</td>
-                <td>$12</td>
-                <td>9 g</td>
-                <td>*</td></tr>
-            <tr>
-                <td>Pepper</td>
-                <td>$11</td>
-                <td>10 g</td>
-                <td>***</td>
-            </tr>
-            <tr>
-                <td>BBQ</td>
-                <td>$14</td>
-                <td>9 g</td>
-                <td>**</td>
-            </tr>
-        </table>
-    </div>
-</body>
-</html>
+---
+layout: page
+title: Menu
+---
+<h2>Menu</h2>
+<table>
+    <tr>
+        <th>Product</th>
+        <th>Price</th>
+        <th>Protein</th>
+        <th>Spicy Rating</th>
+    </tr>
+    <tr>
+        <td>Original</td>
+        <td>$10</td><td>10 g</td>
+        <td>*</td></tr>
+    <tr>
+        <td>Teriyaki</td>
+        <td>$12</td>
+        <td>9 g</td>
+        <td>*</td></tr>
+    <tr>
+        <td>Pepper</td>
+        <td>$11</td>
+        <td>10 g</td>
+        <td>***</td>
+    </tr>
+    <tr>
+        <td>BBQ</td>
+        <td>$14</td>
+        <td>9 g</td>
+        <td>**</td>
+    </tr>
+</table>
