--- a/blog.html
+++ b/blog.html
@@ -5,6 +5,6 @@ title: Blog
 
 
 {% for post in site.posts %}
-<h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
+<h2><a href="{{ post.url | prepend:site.baseurl }}">{{ post.title }}</a></h2>
 <p>{{ post.date | date: "%b %d, %Y" }}</p>
 {% endfor %}
