--- a/location.html
+++ b/location.html
@@ -8,7 +8,7 @@
 <body>
     <div class="container">
         <header>
-            <h1>Awesome Pizza</h1>
+            <h1>Awesome Pizzas</h1>
             <nav>
                 <ul class="nav">
                     <li><a href="index.html">Home</a></li>
